fixes for alignment and code cleanup

--- a/src/containers/Profile/Contact/ContactProfile.module.css
+++ b/src/containers/Profile/Contact/ContactProfile.module.css
@@ -26,6 +26,7 @@
 .Drawer {
   background-color: #ffffff;
   width: fit-content;
+  min-width: 260px;
   border-right: 1px solid #efefef;
   height: calc(100vh - 110px) !important;
 }
@@ -66,7 +67,8 @@
   justify-content: space-between;
   cursor: pointer;
   box-shadow: 0px 1px 1px 0px #00000029;
-  padding: 15px 10px;
+  padding: 15px;
+  align-items: center;
 }
 
 .ProfileHeaderTitle {
